kubernetes/postgres/base/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: postgres
spec:
  type: NodePort    
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30432
  selector:
    app: postgres
