kubernetes/postgres/base/postgres-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  namespace: postgres
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.50.0/24, 83.10.120.112"
spec:
  rules:
  - host: postgres.omni-rs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgres
            port:
              number: 5432
  tls:
  - hosts:
    - postgres.omni-rs.com
    secretName: omni-rs-com-tls-sub
